# wg-p2p-nm-plugin

./: Cargo.toml  Dockerfile  Makefile  README.md  build.rs  fedora-deps.sh
src/gui/: editor.rs  vpn_settings.rs  wg-p2p-vpn-editor.ui
src/service/: service.rs
