[package]
name = "wg-p2p-nm-plugin"
version = "0.1.0"
authors = ["Manuel Schölling <manuel.schoelling@gmx.de>"]
build = "build.rs"

[lib]
crate-type = ["dylib"]
path = "src/gui/lib.rs"

[[bin]]
name = "wg-p2p-vpn-service"
path = "src/service/service.rs"

[build-dependencies]
cc = "*"

[dependencies]
gtk = "0.3.0"
gio-sys = "0.5.0"
gtk-sys = "0.5.0"
libc = "^0.2"
docopt = "*"
glib = "0.4.1"
gdk = "0.7.0"
gobject-sys = "0.5.0"
gdbus = { git = "https://github.com/manuels/gdbus-rs" }
#gdbus = { path = "../gdbus-rs" }
drunken_bishop = "0.1.1"
crslmnl = "*"
time = "*"

[dependencies.glib-sys]
version = "0.5.0"
features = [ "dox" ]

